maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:25: error: Boolean does not take parameters
    } else (getDirection() == Direction.WEST) {
                                              ^